# sqrl-server

./: .env.example  .flake8  .flaskenv  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  database.py  docker-compose.yml  pyproject.toml  requirements.txt  s.txt  scrape_courses.py  search.py  setup.py
.github/: lint.yml
.github/workflows/: ci.yml  format.yml  lint.yml  pytest.yml  release.yml
config/: app_settings.py  gunicorn.py  settings.py
models/: timetable.py
searching/: search_1.py  semantic_search.py
services/: data_sync.py
sqrl/: __init__.py  app.py  cli.py  config.py  data_sync.py  extensions.py  models.py  utils.py
sqrl/blueprints/: __init__.py  ping.py
sqrl/celery/: tasks.py  worker.py
sqrl/data/: sources.py
sqrl/data/sources/: __init__.py  utsg.py
sqrl/extensions/: __init__.py  cors.py  db.py  gator_client.py  migrate.py
sqrl/graphql/: __init__.py  objects.py  schema.graphql  schema.py
sqrl/graphql/objects/: common.py  timetable.py
sqrl/graphql/schemas/: __init__.py  course.py  organisation.py  timetable.py
sqrl/models/: __init__.py  common.py  timetable.py
sqrl/models/migrations/: migrate.py  sessions_and_deleted.py
tests/: test_app.py  test_utils.py
