[tool.poetry]
name = "sqrl-server"
version = "0.1.0"
description = ""
authors = ["Eamon Ma <m@eamonma.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sqrl_server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.0"}
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sqlalchemy = "^2.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
